<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <group android:checkableBehavior="single">-->
    <group>
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_refresh"
            android:icon="@android:drawable/stat_notify_sync"
            android:title="@string/nav_refresh" />
        <item
            android:id="@+id/nav_add_device"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_add_device" />
    </group>

    <item android:title="@string/nav_preference">
        <menu>
            <item
                android:id="@+id/nav_update_cert"
                android:icon="@android:drawable/ic_menu_camera"
                android:title="@string/nav_update_cert" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
