<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="autologin"
        android:summary="@string/pref_description_auto_login"
        android:title="@string/pref_title_auto_login" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_username" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textPassword"
        android:key="password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:password="true"
        android:title="@string/pref_title_password" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_address" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="number"
        android:key="syncinterval"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_sync_interval" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
